--- a/app/src/main/res/layout/marketfragment.xml
+++ b/app/src/main/res/layout/marketfragment.xml
@@ -2,14 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#04044C"
+    android:background="@color/coingeckoDarkGrey"
     >
 
     <TextView
         android:id="@+id/close"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="text"
+        android:text="x"
         android:textColor="@color/white"
         android:textSize="40sp"
         android:layout_margin="20dp"></TextView>
