--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,17 @@
 
         android:textSize="25sp"></ImageView>
 
+
+    <ImageView
+        android:id="@+id/coinboyp"
+        android:layout_width="30dp"
+        android:layout_height="30dp"
+
+
+        android:layout_marginStart="110dp"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/coinboyp"></ImageView>
+
     <TextView
         android:id="@+id/logo"
         android:layout_width="wrap_content"
@@ -77,12 +88,79 @@
 
     </com.google.android.material.tabs.TabLayout>
 
+    <LinearLayout android:layout_width = "match_parent"
+        android:layout_height = "wrap_content"
+        android:id="@+id/lineartabs"
+        android:layout_below="@+id/tablay"
+        android:orientation="horizontal"
+        android:background="@color/coingeckoLightGrey"
+        >
+
+        <TextView
+            android:id="@+id/greenpill1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:layout_margin="10dp"
+            android:text="24hrs"
+            android:background="@drawable/snackbiteshape"
+            android:textSize="12sp"
+            android:padding="10dp"
+            ></TextView>
+
+        <TextView
+            android:id="@+id/greenpill2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:layout_margin="10dp"
+            android:text="ascending"
+            android:background="@drawable/snackbiteshape"
+            android:textSize="12sp"
+            android:padding="10dp"
+            ></TextView>
+
+        <TextView
+            android:id="@+id/greenpill3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:layout_margin="10dp"
+            android:text="USD"
+            android:background="@drawable/snackbiteshape"
+            android:textSize="12sp"
+            android:padding="10dp"
+            ></TextView>
+
+        <TextView
+            android:id="@+id/greenpill4"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:gravity="center"
+            android:layout_margin="10dp"
+            android:text="all coins"
+            android:background="@drawable/snackbiteshape"
+            android:textSize="12sp"
+            android:padding="10dp"
+            ></TextView>
+
+
+
+
+    </LinearLayout>
+
+
+
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/bottomnav"
-        android:layout_below="@+id/tablay">
+        android:layout_below="@+id/lineartabs">
 
     </androidx.viewpager2.widget.ViewPager2>
 
