--- a/app/src/main/res/layout/activity_signintestview.xml
+++ b/app/src/main/res/layout/activity_signintestview.xml
@@ -4,29 +4,48 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/coingeckoAnotherGrey"
     tools:context=".signintestview">
+
+    <ImageView
+        android:id="@+id/coinlogosignin"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_above="@+id/emailinputsignin"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="20dp"
+        android:src="@drawable/coinboyp"></ImageView>
 
     <EditText
         android:id="@+id/emailinputsignin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
+        android:layout_centerInParent="true"
         android:layout_marginStart="20dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="20dp"
         android:layout_marginBottom="20dp"
-        android:hint="enter email to sign in"></EditText>
+        android:gravity="center"
+        android:hint="enter email to sign in"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"></EditText>
 
     <EditText
+        android:id="@+id/passwordinputsignin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/passwordinputsignin"
-        android:inputType="textPassword"
-        android:hint="enter password to sign in"
         android:layout_below="@+id/emailinputsignin"
         android:layout_centerHorizontal="true"
-        android:layout_margin="20dp"
-        ></EditText>
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="20dp"
+        android:hint="enter password to sign in"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white"
+        android:inputType="textPassword"></EditText>
 
     <TextView
         android:id="@+id/signinbuttonact"
